# shy

./: .gitignore  AUTHORS  ChangeLog  Changelog  Makefile.am  NEWS  README  README.md  README.org  configure.ac  man-shy  shy  shy.scm
am/: Makefile.am  guilec
doc/: Makefile.am  man-shy  shy.texi
scripts/: shy  test
